--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 該当するa hrefとimgを探して、
 そのURLの前に/aaaを追加するjs
 
+<pre>
 <code>
 
 $(function() {
@@ -63,6 +64,7 @@ if((host == 'ここと') || (host == 'ここに特定のドメインを入れる
 
 
 </code>
+</pre>
 
 
 </body>
